--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "tweepy>=4.14.0",
     "s3fs>=2024.5.0",
     "python-dotenv>=1.0.1",
+    "pip>=24.0",
+    "pandasql>=0.7.3",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
