--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pip>=24.0",
     "pandasql>=0.7.3",
+    "cookiecutter>=2.6.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
