--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pip>=24.0",
     "pandasql>=0.7.3",
     "cookiecutter>=2.6.0",
+    "airflow>=0.6",
+    "apache-airflow>=2.9.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
