--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "pandas>=2.2.2",
     "python-dotenv>=1.0.1",
     "airflow>=0.6",
+    "pip>=24.0",
+    "pandasql>=0.7.3",
+    "plotly>=5.22.0",
+    "matplotlib>=3.9.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
