--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,6 +3,7 @@ name: Extract Exchange Rates Pipeline
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:      # Allows manual triggering
 
 jobs:
   build:
@@ -18,11 +19,10 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: 
+        run: |
           python -m pip install --upgrade pip
-          echo requirements.txt
           pip install -r requirements.txt
-
+          
       - name: Run the script
         run: python src/exchange_rates.py
 
