--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,10 +18,14 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install pipenv
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pipenv
+  
+      - name: Install dependencies
+        run: |
+          pipenv install --dev 
           
       - name: Run the script
         run: python src/exchange_rates.py
