--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pipenv wheel
       - id: cache-pipenv
-        uses: actions/cache@2
+        uses: actions/cache@v1
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
