--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,7 +38,7 @@ jobs:
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "${{ secrets.PRIVATE_REMOTE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.REMOTE_PUBLIC_KEY }} >> ~/.ssh/known_hosts
+          echo "${{ secrets.REMOTE_PUBLIC_KEY }}" >> ~/.ssh/known_hosts
 
       - name: Run the script on the VM
         env:
