--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,49 +21,34 @@ jobs:
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
-
       - id: cache-pipenv
         uses: actions/cache@v1
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-
+        
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          pipenv install --dev
-
-      - name: Write SSH keys
-        run: |
-          install -m 600 -D /dev/null ~/.ssh/id_rsa
-          echo "${{ secrets.PRIVATE_REMOTE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          echo "${{ secrets.REMOTE_PUBLIC_KEY }}" >> ~/.ssh/known_hosts
-          
-      - name: Run the script on the VM
+          pipenv install --dev 
+        
+      - name: Run the script
         env:
           EXCHANGE_RATE_API_KEY: ${{ secrets.EXCHANGE_RATE_API_KEY }}
-          REMOTE_DB: ${{ secrets.REMOTE_DB_PATH }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_PORT: ${{ secrets.SSH_PORT }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_KEY_LOCAL_PATH : ${{ secrets.SSH_KEY_LOCAL_PATH }}
-          REMOTE_DB_PATH : ${{ secrets.REMOTE_DB_PATH }}
         run: |
-          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'pipenv run python src/extract_and_load.py'
+          pipenv run python src/extract_and_load.py
 
       - name: Run the script to clean data and generate the figure
         env:
           EXCHANGE_RATE_API_KEY: ${{ secrets.EXCHANGE_RATE_API_KEY }}
-          REMOTE_DB: ${{ secrets.REMOTE_DB_PATH }}
         run: |
-          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'pipenv run python src/transform_and_plot.py'
+          pipenv run python src/transform_and_plot.py
 
       - name: Upload generated figure
         uses: actions/upload-artifact@v2
         with:
           name: generated_figure
-          path: figures/currency_evolution_EUR_vm.png
+          path: figures/currency_evolution_EUR.png
 
       - name: Commit files
         run: |
