--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,61 +1,33 @@
-name: Extract Exchange Rates Pipeline
+name: Deploy
 
 on:
   push:
-  schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
-  workflow_dispatch:      # Allows manual triggering
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Install dependencies and prepare environment
+      run: |
+        sudo apt update && sudo apt install -y python3 python3-pip python3-venv
+        python3 -m pip install --user pipx
+        pipx install pdm || true
+        export PATH="$HOME/.local/bin:$PATH"
+        pdm --version
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pipenv wheel
-      - id: cache-pipenv
-        uses: actions/cache@v1
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-        
-      - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: |
-          pipenv install --dev 
-        
-      - name: Run the script
-        env:
-          EXCHANGE_RATE_API_KEY: ${{ secrets.EXCHANGE_RATE_API_KEY }}
-        run: |
-          pipenv run python src/extract_and_load.py
-
-      - name: Run the script to clean data and generate the figure
-        env:
-          EXCHANGE_RATE_API_KEY: ${{ secrets.EXCHANGE_RATE_API_KEY }}
-        run: |
-          pipenv run python src/transform_and_plot.py
-
-      - name: Upload generated figure
-        uses: actions/upload-artifact@v3
-        with:
-          name: generated_figure
-          path: figures/currency_evolution_EUR.png
-
-      - name: Commit files
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update exchange rates"
-
-      - name: Push changes
-        run: git push
+    - name: Deploy using ssh
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_IP }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |
+          set -e
+          cd /root/projects/currency_rate_extractor
+          git pull origin SSH_VM
+          /root/.local/bin/pdm install
+          /root/.local/bin/pdm venv activate
+          /root/.local/bin/pdm run python tests/health_check.py
